test/libsolidity/syntaxTests/functionTypes/public_function_type.sol
contract C {
    function f() public {
        function(uint) public returns (uint) x;
    }
}
// ----
// TypeError: Invalid visibility, can only be "external" or "internal".
